network/network-internal-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    name: internal-policy
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - ingress
  - egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      nameSpaceSelector:
        matchLabels:
          name: dev     
    ports:
    - protocol: TCP
      port: 3306
  - from:    
    - podSelector:
        matchLabels:
          name: api-pod
      nameSpaceSelector:
        matchLabels:
          name: prod
    ports:
    - protocol: TCP
      port: 3306        
  egress:
  - to:
    - podSelector:
        matchLabels: 
          name: prod 
    ports:  
    - protocol: TCP
      port: 8080
